# checkMark

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  run.sh
frontend/: output-schema.js  package.json  schema.graphql  schema.json
frontend/public/: index.html
frontend/src/: App.css  App.js  environment.js  index.css
frontend/src/__generated__/: AppQuery.graphql.js
lines-are-rusty/src/: parse.rs  render.rs
src/: api.rs  graphql.rs  lib.rs  main.rs  notebook.rs
static/: index.html
