[package]
name = "checkmark"
version = "0.1.0"
authors = ["Tim Ryan <id@timryan.org>"]
edition = "2018"

[dependencies]
warp = "0.1"
juniper = { version = "0.15.10", features = ["serde_json"] }
juniper_warp = "0.4"
serde_json = "1.0.24"
lazy_static = "*"
serde_derive = "1.0.75"
serde = "1.0.75"
log = "*"
env_logger = "*"
reqwest = "*"
commandspec = "*"
time = "0.1"
zip = "0.5.3"
crossbeam-channel = "*"
regex = "*"
tempfile = "3"
resvg = { version = "0.8", features = ["cairo-backend"] }
sha-1 = "0.8"
rayon = "1"
percent-encoding = "1"
chrono = "0.4"
humantime = "1.2.0"
lines-are-rusty = { path = "./lines-are-rusty" }
